--- a/results-summary-component-main/index.html
+++ b/results-summary-component-main/index.html
@@ -27,7 +27,7 @@
     </style>
   </head>
   <body>
-    <div class="conteiner">
+    <div class="container">
       <div class="sect izq">
         <h2>Your Result</h2>
         <div class="circle1">
